--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume-builder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Whitneyyx00.github.io/resume-builder",
+  "homepage": "http://Whitneyyx00.github.io/resume-builder",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
